--- a/blocklydemo/src/main/AndroidManifest.xml
+++ b/blocklydemo/src/main/AndroidManifest.xml
@@ -22,7 +22,31 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:supportsRtl="true" >
+        android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
+    >
+        <activity
+                android:name=".AndroidActivity"
+                android:label="@string/android_activity_name"
+                android:taskAffinity="com.google.blockly.demo.AndroidActivity"
+                android:windowSoftInputMode="stateHidden|adjustPan">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
+        <activity
+                android:name=".TurtleActivity"
+                android:label="@string/turtle_activity_name"
+                android:taskAffinity="com.google.blockly.demo.TurtleActivity"
+                android:windowSoftInputMode="stateHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name=".SimpleActivity"
@@ -113,16 +137,6 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".TurtleActivity"
-            android:label="@string/turtle_activity_name"
-            android:taskAffinity="com.google.blockly.demo.TurtleActivity"
-            android:windowSoftInputMode="stateHidden|adjustPan">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
         <activity
             android:name=".StylesActivity"
