--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':blocklylib-core', ':blocklydemo', ':blocklylib-vertical', ':blocklytest'
+include ':blocklylib-core', ':blocklydemo', ':blocklylib-vertical', ':blocklytest', ':lytdemo'
